sfdx-source/packaged/main/core/objects/Account/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <description>Customer Ids that could be populated from external systems</description>
    <externalId>true</externalId>
    <inlineHelpText>Customer Id from external system</inlineHelpText>
    <label>Customer Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>