sfdx-source/packaged/main/core/objects/Account/fields/HashKey__c.field-meta.xml
<CustomField>
    <fullName>HashKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Hash key based on the record's Id that can be used to activate the account for external time entry approval.</description>
    <externalId>true</externalId>
    <label>Hash Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>