sfdx-source/packaged/main/core/objects/Account/fields/IsTimeSheetApprovalEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsTimeSheetApprovalEnabled__c</fullName>
    <description>Activates this account for time sheet approval.</description>
    <inlineHelpText>Activate to enabled external time sheet approval for this account.</inlineHelpText>
    <label>Timesheet Approval Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>